fixed gradient flicker and corners for mobile

--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -146,7 +146,7 @@
   display: flex;
   align-items: flex-end;
   border-radius: 0.75rem;
-  overflow:hidden;
+  /* overflow:hidden; */
 }
 
 .imageText {
